<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.TableOfLeague">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/AVLoadingIndicatorView.Large"
            app:indicatorName="BallGridPulseIndicator"
            app:indicatorColor="@color/darkGreen"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/headOfTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="13"
                android:layout_margin="4dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/team_name"
                    android:textColor="@color/darkGreen" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/play"
                    android:textColor="@color/darkGreen"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/win"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/draw"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/loss"
                    android:textColor="@color/darkGreen"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/score"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/receive"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/difference"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/points"
                    android:textColor="@color/darkGreen"/>

            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_table_league"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>