<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:id="@+id/teamPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ball"
                app:civ_border_color="@color/darkGreen"
                app:civ_border_width="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_players"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/darkGreen"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/teamMatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:onClick="teamMatches">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ball"
                app:civ_border_color="@color/darkGreen"
                app:civ_border_width="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_matches"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/darkGreen"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tableOfLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ball"
                app:civ_border_color="@color/darkGreen"
                app:civ_border_width="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_league"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/darkGreen"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/goToHomePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ball"
                app:civ_border_color="@color/darkGreen"
                app:civ_border_width="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homePage"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/darkGreen"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ball2"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>