<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.TeamDetails">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/AVLoadingIndicatorView.Large"
            app:indicatorName="BallGridPulseIndicator"
            app:indicatorColor="@color/darkGreen"
            android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/linearDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/teamLogo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/teamAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/formed_year"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/Stadium"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/teamStadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageTeamStadium"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/teamKeywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/stadium_location"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamStadiumLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/stadium_capacity"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamStadiumCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/web"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/face"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:text="@string/youtube"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/teamYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageTeamShirt"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/teamDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
</FrameLayout>