<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.MainActivity"
    tools:openDrawer="start">
    <include
        layout="@layout/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <include
            android:id="@+id/teamDrawer"
            layout="@layout/drawer_content"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="gone"/>
        <ScrollView
            android:id="@+id/mainDrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon"
                    android:layout_marginBottom="16dp"/>
                <LinearLayout
                    android:id="@+id/searchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/search"
                        android:layout_gravity="center_vertical"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp"/>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/searchTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp">
                        <EditText
                            android:id="@+id/searchEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                    <Button
                        android:onClick="search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:background="@drawable/btn"/>
                </LinearLayout>
                <LinearLayout
                    android:onClick="TeamByName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/ball2"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchTeam"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:onClick="PlayerByName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/ball2"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchPlayer"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/leagueTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/ball2"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table_league"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:onClick="dayMatches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/ball2"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matches_today"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/red"/>
                </LinearLayout><LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/ball2"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
                <LinearLayout
                    android:id="@+id/logOut2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="12dp"
                    android:onClick="logout">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/ball"
                        app:civ_border_color="@color/darkGreen"
                        app:civ_border_width="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/darkGreen"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>